After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 678263 - critical warning from gsettings
critical warning from gsettings
Status: RESOLVED FIXED
Product: gucharmap
Classification: Core
Component: general
git master
Other Linux
: Normal critical
: ---
Assigned To: gucharmap maintainers
gucharmap maintainers
Depends on:
Blocks:
 
 
Reported: 2012-06-17 19:47 UTC by Christian Persch
Modified: 2012-08-24 20:25 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Christian Persch 2012-06-17 19:47:34 UTC
Steps to repro:

Navigate to the U+FFFE or U+FFFF codepoint.

Results:

gucharmap:18730): GLib-CRITICAL **: g_variant_new_string: assertion `g_utf8_validate (string, -1, NULL)' failed

(gucharmap:18730): GLib-GIO-CRITICAL **: g_settings_schema_key_type_check: assertion `value != NULL' failed
Comment 1 Behdad Esfahbod 2012-06-17 19:52:58 UTC
This is one of the thing I disagree on with all other glib people: that invalid-UTF-8-encoded issues should be separated from "this is not a valid Unicode character" issues.  Right now, they are mixed...
Comment 2 Christian Persch 2012-08-24 20:25:50 UTC
Fixed on master.