charmap: Store last selected character as uint32

... instead of as string.

https://bugzilla.gnome.org/show_bug.cgi?id=678263